padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- LV2 Plug-in Control Input Port-Change Request extension is not
  tagged experimental anymore.
- Shut-off all voices/notes whenever any wavetable parameter is
  reset or changed. (EXPERIMENTAL) (mitigates GH Issue #12)


1.0.0  2024-06-20  An Unthinkable Release.

- Making up the unthinkable (aka. v1.0.0)


0.9.91  2024-05-02  A Spring'24 Release Candidate 2.

- Prepping the unthinkable (aka. v1.0.0-rc2)
- Updated to latest framework level (Qt >= 6.7)


0.9.90  2024-04-11  A Spring'24 Release Candidate.

- Prepping the unthinkable (aka. v1.0.0-rc1)
- Custom color themes are now file based (*.conf); legacy still
  preserved ntl.
- Fixed the build checks on whether to use old or newer style of
  LV2 include headers.


0.9.34  2024-01-26  A Winter'24 Release.

- Added build checks on whether to use old or newer style of LV2
  include headers.
- LV2 plugin Control Input Port-change request extension feature
  support added.
- Updated copyright headers into the New Year (2024).


0.9.33  2023-12-20  An End-of-Autumn'23 Release.

- Minor optimization to denormal avoidance on some fx's.
- Bumping into next development cycle (Qt >= 6.6)


0.9.32  2023-09-12  An End-of-Summer'23 Release.

- Preppings to next development cycle (Qt >= 6.6)


0.9.31  2023-06-06  A Spring'23 Release.

- Make sure the XCB interface is in use when instantiating the
  LV2 plugin on non-Qt hosts, allowing LV2 X11 UI embedding to
  work and show up properly.
- Prepping into the next development cycle (with Qt >= 6.5).


0.9.30  2023-03-24  An Early-Spring'23 Release.

- Restrict to existing named presets when adding new or editing
  programs; load and restore presets directly when previewing
  programs (cf. Configure... > Programs).
- NSM open and save operation failures are now replied with an
  error status (was always OK before).