@@ -1,7 +1,7 @@
 // padthv1_sched.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012-2021, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2024, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -45,10 +45,20 @@ public:
 	// schedule processing and wake from wait condition.
 	void schedule(padthv1_sched *sched);
 
+	// process all pending runs immediately.
+	void sync_pending();
+
+	// clear all pending runs immediately.
+	void sync_reset();
+
 protected:
 
 	// main thread executive.
 	void run();
+	void run_process();
+
+	// clear all.
+	void clear();
 
 private:
 
@@ -89,12 +99,9 @@ padthv1_sched_thread::padthv1_sched_thread ( uint32_t nsize ) : QThread()
 	m_nmask = (m_nsize - 1);
 	m_items = new padthv1_sched * [m_nsize];
 
-	m_iread  = 0;
-	m_iwrite = 0;
-
-	::memset(m_items, 0, m_nsize * sizeof(padthv1_sched *));
-
 	m_running = false;
+
+	clear();
 }
 
 
@@ -132,6 +139,33 @@ void padthv1_sched_thread::schedule ( padthv1_sched *sched )
 }
 
 
+// process all pending runs, immediately.
+void padthv1_sched_thread::sync_pending (void)
+{
+	QMutexLocker locker(&m_mutex);
+
+	run_process();
+}
+
+
+// clear all pending runs, immediately.
+void padthv1_sched_thread::sync_reset (void)
+{
+	QMutexLocker locker(&m_mutex);
+
+	clear();
+}
+
+
+void padthv1_sched_thread::clear (void)
+{
+	m_iread  = 0;
+	m_iwrite = 0;
+
+	::memset(m_items, 0, m_nsize * sizeof(padthv1_sched *));
+}
+
+
 // main thread executive.
 void padthv1_sched_thread::run (void)
 {
@@ -141,21 +175,27 @@ void padthv1_sched_thread::run (void)
 
 	while (m_running) {
 		// do whatever we must...
-		uint32_t r = m_iread;
-		while (r != m_iwrite) {
-			padthv1_sched *sched = m_items[r];
-			if (sched) {
-				sched->sync_process();
-				m_items[r] = nullptr;
-			}
-			++r &= m_nmask;
-		}
-		m_iread = r;
+		run_process();
 		// wait for sync...
 		m_cond.wait(&m_mutex);
 	}
 
 	m_mutex.unlock();
+}
+
+
+void padthv1_sched_thread::run_process (void)
+{
+	uint32_t r = m_iread;
+	while (r != m_iwrite) {
+		padthv1_sched *sched = m_items[r];
+		if (sched) {
+			sched->sync_process();
+			m_items[r] = nullptr;
+		}
+		++r &= m_nmask;
+	}
+	m_iread = r;
 }
 
 
@@ -260,6 +300,21 @@ void padthv1_sched::sync_notify ( padthv1 *pSynth, Type stype, int sid )
 		while (iter.hasNext())
 			iter.next()->notify(stype, sid);
 	}
+}
+
+
+// process/clear pending schedules, immediately. (static)
+void padthv1_sched::sync_pending (void)
+{
+	if (g_sched_thread)
+		g_sched_thread->sync_pending();
+}
+
+
+void padthv1_sched::sync_reset (void)
+{
+	if (g_sched_thread)
+		g_sched_thread->sync_reset();
 }
 
 
